(library
 (public_name dream-mirage)
 (name dream__mirage)
 (libraries
  bigarray-compat
  bigstringaf
  digestif
  dream.cipher
  dream.server
  dream.certificate
  dream-pure
  h2
  lwt
  rresult
  tcpip
  paf
  paf.alpn
  paf.mirage
 )
 (preprocess (pps lwt_ppx))
 (instrumentation (backend bisect_ppx)))
